--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "babel-register": "^6.9.0",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "jquery": "3.1.1",
+    "jquery-ui-dist": "1.12.1",    
+    "gridstack": "0.3.0",
+    "lodash": "4.17.4"
   }
 }
