--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "gulp-eslint": "^2.0.0",
     "gulp-sass": "^2.3.2",
     "jquery": "3.1.1",
-    "jquery-ui-dist": "1.12.1",    
+    "jquery-ui": "1.12.1",    
     "gridstack": "0.3.0",
     "lodash": "4.17.4"
   }
